# snake

untitled1/: Border.cpp  Border.h  CMakeLists.txt  Direction.cpp  Direction.h  Highscore.cpp  Highscore.h  Position.cpp  Position.h  Prey.cpp  Prey.h  Score.cpp  Score.h  SimpleInput.cpp  SimpleInput.h  SimpleScreen.cpp  SimpleScreen.h  Snake.cpp  Snake.h  main.cpp
